# InvestAI

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
evals/: run_evals.py
evals/cases/: soxx_vs_smh.yaml
infra/terraform/: README.md
scripts/: smoke_mcp.py  spike_symbols.py
src/investai/: config.py  llm.py
src/investai/agents/: analyst.py  base.py  filings_rag.py  market_data.py  planner.py
src/investai/analysis/: fees.py  overlap.py
src/investai/api/: main.py  schemas.py
src/investai/dataaccess/: interface.py  mcp_base.py  mcp_remote.py  mcp_stdio.py  models.py  quotes.py  registry.py  sources.py  tase_adapter.py
src/investai/orchestration/: local_runner.py  machine.py  state.py
src/investai/rag/: citations.py  embed.py  rerank.py  retrieve.py  store.py
src/investai/rag/ingest/: fetch.py  pipeline.py
src/investai/rag/ingest/sections/: base.py  maya_he.py  sec_10k.py
src/investai/stores/: blob_store.py  state_store.py
tests/unit/: test_models_and_schemas.py  test_overlap.py  test_quotes.py
